# openresilience

./: .env.template  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_POLICY.md  ETHICS.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  QUICKSTART_SMS.md  QUICK_START_KENYA.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  STREAMLIT_SMS_SETUP.md  SUPPORT.md  TRADEMARK.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup_sms.py  webhook.py
.github/workflows/: ci.yml  update-satellite-data.yml
.streamlit/: config.toml
api/: Dockerfile  requirements.txt
api/api/: db.py  main.py  middleware.py  redis_client.py  settings.py
data/admin/: ke_admin_hierarchy.json  ke_ward_centroids.csv
data/gee_cache/: baringo.json  bomet.json  bungoma.json  busia.json  elgeyo-marakwet.json  embu.json  garissa.json  homa_bay.json  isiolo.json  kajiado.json  kakamega.json  (+36 more)
docs/: ARCHITECTURE.md  DATA_ADAPTERS.md  DEPLOYMENT.md  EARTH_ENGINE_QUICKSTART.md  FEATURES.md  INDEX_METHODOLOGY.md  IP_PROTECTION_SUMMARY.md  NASA_QUICKSTART.md  OPERATIONS.md  REAL_DATA_INTEGRATION.md  SAFETY_POLICY.md  SMS_SETUP.md  THREAT_MODEL.md
migrations/: 001_init.sql  002_indexes.sql
notifier/: Dockerfile
scripts/: generate_realistic_data.py  send_test_sms.py  send_weekly_alerts.py  test_gee_connection.py  test_sms.py  update_gee_data.py  update_nasa_data.py
tests/: __init__.py  test_constants.py  test_data.py  test_database.py  test_geo.py  test_glossary.py  test_resolution.py  test_scoring.py  test_trust.py
ui/: Dockerfile  app.py
worker/: Dockerfile  requirements.txt
(+86 files in other folders)
