[project]
name = "openresilience"
version = "0.1.0"
description = "Drought / Water / Food Stress Intelligence System"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "W291", "W293"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
