[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openresilience"
version = "0.1.0"
description = "Drought / Water / Food Stress Intelligence System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CC-BY-NC-ND-4.0"}
authors = [
    {name = "Gabriel Mahia", email = "contact@aikungfu.dev"}
]
keywords = ["resilience", "drought", "water-stress", "kenya", "climate"]

dependencies = [
    "streamlit>=1.20.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "folium>=0.14.0",
    "streamlit-folium>=0.11.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
